# umbrella

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
apps/config/: settings.py  urls.py
apps/data_ingestion/: README.md  tests.py  urls.py  views.py
apps/data_ingestion/migrations/: 0001_initial.py  0002_rename_timestamp_historicalprice_date.py  0003_historicalexchangerate.py  0004_delete_historicalexchangerate.py  0005_historicalpriceenriched.py  0006_basehistoricalexchangerate.py  0007_tickerinfo.py  0008_historicalprice_currency.py  0009_historicalprice_close_euro_historicalprice_high_euro_and_more.py  0010_delete_historicalpriceenriched.py  (+3 more)
apps/portfolio_valuation/: README.md  admin.py
apps/transactions/: admin.py  models.py  urls.py  views.py
apps/users/: README.md  urls.py  views.py
database/: db.sqlite3
deployment/: docker-compose.yml
notebooks/: Account.xlsx  cleaned_transactions.xlsx  cleaned_transactions_processed.xlsx  data_exploration.ipynb  degiro_processing.ipynb  transactions.xlsx
scripts/: test_alpha_vantage_client.py  tests_full_portfolio.ipynb
umbrella/config/: asgi.py  settings.py  urls.py  wsgi.py
umbrella/data_ingestion/: admin.py  apps.py  models.py  urls.py  views.py
umbrella/portfolio_valuation/: README.md  admin.py  apps.py  models.py  tests.py  urls.py  views.py
umbrella/risk_management/: admin.py  models.py  urls.py  views.py
umbrella/transactions/: README.md  admin.py  models.py
umbrella/users/: README.md  views.py
(+50 files in other folders)
