[tool.poetry]
name = "data_ingestion"
version = "0.1.0"
description = "Ingestion of the historical data to store it locally"
authors = ["AntoineG-GitHub <antoinegeller@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
django = ">=3.1.3"
requests = ">=2.32.3,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
pandas-market-calendars = ">=5.1.0,<6.0.0"
yfinance = ">=0.2.61,<0.3.0"
django-cors-headers = "^4.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
